# ARDiS

./: .gitattributes  .gitignore  CMakeLists.txt  Export Matrix processing v2 hedi.nb  ImageToMatrix.wls  ImageToMatrixControlPrecision.wls  MakeMatrix.wls  MazeGenerator.wls  Ploter.py  README.md  README.me  bootstrap.sh  build.sh  main.cu  main.h  module.cpp  run.sh  test  test.cu  test.py
docs/: README.md  build.sh  conf.py  index.rst
docs/_build/doctrees/: contents.doctree  environment.pickle  index.doctree
docs/_build/html/: .buildinfo  contents.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_build/text/: index.txt
docs/content/: completedoc.rst  examples.rst  started.rst
documentation/: conf.py  index.rst
documentation/_build/doctrees/: environment.pickle  index.doctree
example/: BeadsModel.py  BeadsModelPerf.py  Curve.py  MazeExplorer.py  MinimumExample.py  Square_OneSpecies.py  Square_PredatorPreyOscillations.py
matrix/: 494_bus.mtx  test.mtx
matrixTest/: small.mtx  small1.mtx  testNULL.mtx
output/: CgmIterCount
pythonLib/: build.sh
pythonLib/ardis/: plotlib_wrap.py  read_write.py
pythonLib/ardis/geometry/: __init__.py  read_write.py
pythonScripts/: LabyrinthExplorer.py  Run_Simulation.py
pythonlib/: setup.py
pythonlib/ardis/: __init__.py  cg_solve.py  concentration_manager.py  convert.py  geometry.py  plotlib_wrap.py  print.py  reaction_diffusion.py  read_mtx.py  read_write.py
pythonlib/ardis/d_geometry/: __init__.py  convert.py
pythonlib/ardis/geometry/: geometry.py  read_write.py
src/: FEM_Output.py  FEM_SpeedTest.py  SolveLinEq.py  main.cpp  main.h  main.hpp  module.cpp  test.py
src/cusparseOperations/: dot_sparse.cu  dot_sparse.hpp  row_ordering.cpp  row_ordering.hpp
src/dataStructures/: array.cu  array.hpp  hd_data.cpp  hd_data.hpp  matrix_element.cu  matrix_element.hpp  read_mtx_file.h  sparse_matrix.cu  sparse_matrix.hpp
src/dataStructures/helper/: apply_operation.h  matrix_helper.h  vector_helper.h
src/dataStructures/readWrite/: read_mtx_file.h  read_write.h
src/dataStructures/zoneManager/: point_2d.cpp  point_2d.hpp  rectangle_zone.cu  rectangle_zone.hpp  zone_methods.cu  zone_methods.hpp
src/geometry/: mesh.cu  mesh.hpp  point_2d.cpp  point_2d.hpp  zone.cu  zone.hpp  zone_methods.cu  zone_methods.hpp
src/include/: constants.h  constants.hpp  main.hpp  pybind11_include.hpp
src/include/cudaHelper/: cuda_error_check.h  cuda_error_constants.cpp  cuda_thread_manager.h  cusolverSP_error_check copy.h  cusparse_error_check.h
src/include/cusparseOperations/: row_ordering.h  row_ordering.hpp  solver.h
src/include/hediHelper/: chrono_profiler.cpp  chrono_profiler.hpp  string.h
src/include/helper/: chrono_profiler.cpp  (+2 more)
src/matrixOperations/: basic_operations.cu  basic_operations.hpp  row_ordering.cpp  row_ordering.hpp
src/modulePython/: read_mtx.py
src/pythonScripts/: CPU_Run.py  CppLabyrinthExplorer.py  FEM_Output.py  FEM_SpeedTest.py  LabyrinthExplorer.py  LabyrinthTest.py  PrintResults.py  Run_Simulation.py  test.py
src/reactionDiffusionSystem/: addReac.cpp  parseReaction.cpp  parseReaction.hpp  parse_reaction.cpp  parse_reaction.hpp  reaction.cu  reaction.h  reaction.hpp  reactionHelper.h  reaction_computer.h  reaction_computer.hpp  simulation.cu  simulation.hpp  state.cu  state.hpp  system.cu  system.hpp
src/solvers/: conjugate_gradient_solver.cu  conjugate_gradient_solver.hpp  inversion_solver.h
src/sparseDataStruct/: double_data.cpp  double_data.hpp  matrix_element.cu  matrix_element.hpp  matrix_sparse.cpp  matrix_sparse.cu  matrix_sparse.hpp  read_mtx_file.h  vector_dense.cu  vector_dense.hpp
wolframScripts/: ImageToData.wls  ImageToMatrix.wls  ImageToMatrixControlPrecision.wls  MakeMatrix.wls  MazeGenerator.wls
(+41 files in other folders)
